--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
   <title>LIFE X</title>
 </head>
 <body>
+  <div id="app"></div>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous">
+  </script>
   <script src="/webpack/bin/app.bundle.js"></script>
 </body>  
